--- a/React/src/index.html
+++ b/React/src/index.html
@@ -6,12 +6,12 @@
     <!-- Not present in the tutorial. Just for basic styling. -->
     <link rel="stylesheet" href="css/base.css" />
 
-    <script src="../lib/react.min.js"></script>
-    <script src="../lib/react-dom.min.js"></script>
-    <script src="../lib/jquery.min.js"></script>
-    <script src="../lib/babel.min.js"></script>
-    <script src="../lib/remarkable.min.js"></script>
-    <script src="../lib/immutable.min.js"></script>
+    <script src="./lib/react.min.js"></script>
+    <script src="./lib/react-dom.min.js"></script>
+    <script src="./lib/jquery.min.js"></script>
+    <script src="./lib/babel.min.js"></script>
+    <script src="./lib/remarkable.min.js"></script>
+    <script src="./lib/immutable.min.js"></script>
 
 
   </head>
